# EEC277

./: .gitignore  README.md  template.tex
HW/Final Project/: EEC277_pre.pptx
HW/Final Project/codes/CPURayTracerFromScratch/: Camera.cpp  Camera.h  Color.cpp  Color.h  Light.cpp  Light.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Source.cpp  Source.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vect.cpp  Vect.h  main.cpp
HW/Final Project/codes/GPURayTracer_OpenGL/: basicFShader2.glsl  basicVShader2.glsl  main.cpp
HW/Final Project/codes/GPURayTracer_OpenGL/RayTracingOpenGL/: RayTracingOpenGL.opensdf  (+1 more)
HW/Final Project/proposal/: background.tex  mybib.bib  proposal.tex
HW/Final Project/proposal/tex/: abs.tex  goal.tex  milestones.tex  motivation.tex  related.tex
HW/Final Project/report/: Book1.xlsx  bib.tex  sample.bib
HW/Final Project/resources/: final_P62.doc  links.txt
HW/HW1/: graphics pipeline.tex  mybib.bib
HW/HW2/part_b/basic_arithmetics/: COS  EX2  LG2  SIN  cos.txt  final_average_relative_error.txt  log2.txt  power2.txt  precision_test.cpp  precision_test.h  sin.txt  square_root.txt
HW/HW2/part_b/dotProductCUDA/: vectorDotProduct.cu
HW/HW2/part_b/rounding/: rounding.cpp
HW/HW2/precision/: Source1.cpp  precision_test.cpp  precision_test.h
HW/HW2/report/: Char.out  Char.tex  app.tex  intro.tex  mybib.bib  part1.tex  part2.tex
HW/HW2/report/fig/: wes.xlsx
HW/HW2/wesbench/eec277-w17/: CMakeLists.txt  Legal.txt  License.txt  README.txt  assignment2.md  compiling.md  updates.md  wesbench-instructional.cpp
(+28 files in other folders)
